--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "main": "src/server.js",
   "type": "module",
-  
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "dev": "nodemon src/server.js",
@@ -16,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sequelize/core": "^7.0.0-alpha.46",
     "@sequelize/postgres": "^7.0.0-alpha.46",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
@@ -37,6 +37,7 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.4",
     "babel-jest": "^29.7.0",
+    "cypress": "^14.2.1",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
