updated tests for payments

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/server.js",
   "type": "module",
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test": "npx jest",
     "dev": "nodemon src/server.js",
     "build": "tsc",
     "watch": "tsc -w",
