--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "@sequelize/core": "^7.0.0-alpha.46",
     "@sequelize/postgres": "^7.0.0-alpha.46",
     "bcrypt": "^5.1.1",
@@ -25,6 +26,7 @@
     "helmet": "^8.1.0",
     "jest-mock-req-res": "^1.0.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.12.0",
     "nodemailer": "^6.10.0",
     "pg": "^8.14.1",
