--- a/package.json
+++ b/package.json
@@ -15,21 +15,30 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@datastax/astra-db-ts": "^2.0.1",
     "@google/generative-ai": "^0.24.0",
+    "@langchain/core": "^0.3.49",
+    "@langchain/openai": "^0.5.7",
+    "@neo4j/graphql": "^7.0.0",
     "@sequelize/core": "^7.0.0-alpha.46",
     "@sequelize/postgres": "^7.0.0-alpha.46",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "cassandra-driver": "^4.8.0",
+    "chromadb": "^2.3.0",
+    "chrono-node": "^2.8.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "helmet": "^8.1.0",
     "jest-mock-req-res": "^1.0.2",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.3.24",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.12.0",
     "nodemailer": "^6.10.0",
-    "pg": "^8.14.1",
+    "openai": "^4.96.0",
+    "pg": "^8.15.6",
     "sequelize": "^6.37.7",
     "supertest": "^7.1.0"
   },
